# podcast-cli

./: .gitignore  .hgignore  AUTHORS  Makefile.am  configure.ac
src/: Makefile.am  cli.c  cli.h  config-parser.c  config-parser.h  download.c  download.h  main.c  rss.c  rss.h
